--- a/ENEM_Frontin.ipynb
+++ b/ENEM_Frontin.ipynb
@@ -4,7 +4,7 @@
   "metadata": {
     "colab": {
       "provenance": [],
-      "authorship_tag": "ABX9TyOONRzta/vdR18sNzlnI+Rp",
+      "authorship_tag": "ABX9TyPvP4/w7QkwMh09sMuWjsdc",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -27,14 +27,23 @@
       ]
     },
     {
+      "cell_type": "markdown",
+      "source": [
+        "Dados do Enem 2024. Fonte: https://www.gov.br/inep/pt-br/acesso-a-informacao/dados-abertos/microdados/enem\n"
+      ],
+      "metadata": {
+        "id": "wlC4Lho1bGa4"
+      }
+    },
+    {
       "cell_type": "code",
-      "execution_count": 2,
+      "execution_count": 1,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "0rIRChG59cP8",
-        "outputId": "b50a8713-22b3-4ba0-a520-d4e3d86d02ad"
+        "outputId": "91a9fc3b-1e41-471d-9665-39070195f21d"
       },
       "outputs": [
         {
@@ -74,9 +83,9 @@
           "height": 360
         },
         "id": "T9Cym4NCAIcw",
-        "outputId": "ca380a45-e00a-40d9-cbe0-ef701fb598f5"
+        "outputId": "619c6e1f-6589-460a-cb58-929f50465717"
       },
-      "execution_count": 3,
+      "execution_count": 2,
       "outputs": [
         {
           "output_type": "stream",
@@ -149,7 +158,7 @@
             ],
             "text/html": [
               "\n",
-              "  <div id=\"df-00c7fe5d-d3de-4cfa-b86f-eab14e967481\" class=\"colab-df-container\">\n",
+              "  <div id=\"df-1c51ce17-9072-4179-a3fc-2b8303bc13dd\" class=\"colab-df-container\">\n",
               "    <div>\n",
               "<style scoped>\n",
               "    .dataframe tbody tr th:only-of-type {\n",
@@ -319,7 +328,7 @@
               "    <div class=\"colab-df-buttons\">\n",
               "\n",
               "  <div class=\"colab-df-container\">\n",
-              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-00c7fe5d-d3de-4cfa-b86f-eab14e967481')\"\n",
+              "    <button class=\"colab-df-convert\" onclick=\"convertToInteractive('df-1c51ce17-9072-4179-a3fc-2b8303bc13dd')\"\n",
               "            title=\"Convert this dataframe to an interactive table.\"\n",
               "            style=\"display:none;\">\n",
               "\n",
@@ -371,12 +380,12 @@
               "\n",
               "    <script>\n",
               "      const buttonEl =\n",
-              "        document.querySelector('#df-00c7fe5d-d3de-4cfa-b86f-eab14e967481 button.colab-df-convert');\n",
+              "        document.querySelector('#df-1c51ce17-9072-4179-a3fc-2b8303bc13dd button.colab-df-convert');\n",
               "      buttonEl.style.display =\n",
               "        google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "\n",
               "      async function convertToInteractive(key) {\n",
-              "        const element = document.querySelector('#df-00c7fe5d-d3de-4cfa-b86f-eab14e967481');\n",
+              "        const element = document.querySelector('#df-1c51ce17-9072-4179-a3fc-2b8303bc13dd');\n",
               "        const dataTable =\n",
               "          await google.colab.kernel.invokeFunction('convertToInteractive',\n",
               "                                                    [key], {});\n",
@@ -396,8 +405,8 @@
               "  </div>\n",
               "\n",
               "\n",
-              "    <div id=\"df-92e087b8-8c5a-4718-8be2-0007b1dbdf77\">\n",
-              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-92e087b8-8c5a-4718-8be2-0007b1dbdf77')\"\n",
+              "    <div id=\"df-1a14a028-9177-4a9f-8239-9f299018c2db\">\n",
+              "      <button class=\"colab-df-quickchart\" onclick=\"quickchart('df-1a14a028-9177-4a9f-8239-9f299018c2db')\"\n",
               "                title=\"Suggest charts\"\n",
               "                style=\"display:none;\">\n",
               "\n",
@@ -516,7 +525,7 @@
               "        }\n",
               "        (() => {\n",
               "          let quickchartButtonEl =\n",
-              "            document.querySelector('#df-92e087b8-8c5a-4718-8be2-0007b1dbdf77 button');\n",
+              "            document.querySelector('#df-1a14a028-9177-4a9f-8239-9f299018c2db button');\n",
               "          quickchartButtonEl.style.display =\n",
               "            google.colab.kernel.accessAllowed ? 'block' : 'none';\n",
               "        })();\n",
@@ -532,7 +541,7 @@
             }
           },
           "metadata": {},
-          "execution_count": 3
+          "execution_count": 2
         }
       ]
     },
@@ -547,9 +556,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "I5VvaWpxB2r-",
-        "outputId": "bf2fe777-6788-421b-c487-50fb95391e6f"
+        "outputId": "389091c7-49de-4491-e7fb-82a811821dc5"
       },
-      "execution_count": 4,
+      "execution_count": 3,
       "outputs": [
         {
           "output_type": "stream",
@@ -632,9 +641,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "5rubyNh-B-GF",
-        "outputId": "6155d367-6d42-4d74-d2ba-809f5fa774e6"
+        "outputId": "04dfe13d-a951-4cfd-cb98-a2d6ffa7bb16"
       },
-      "execution_count": 5,
+      "execution_count": 4,
       "outputs": [
         {
           "output_type": "stream",
@@ -662,9 +671,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "OLE8NkEjG2vB",
-        "outputId": "04541238-22f9-4555-c145-ec49ca97632a"
+        "outputId": "a5f6562a-f562-4e16-a605-9667c7bd2009"
       },
-      "execution_count": 6,
+      "execution_count": 5,
       "outputs": [
         {
           "output_type": "stream",
@@ -717,9 +726,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "VKPRiVtxOXUe",
-        "outputId": "01adfb8b-b0fb-4a9d-cf13-29892e44608d"
+        "outputId": "d815b9f3-317b-4dac-8468-06531672527b"
       },
-      "execution_count": 7,
+      "execution_count": 6,
       "outputs": [
         {
           "output_type": "stream",
@@ -767,9 +776,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "hrxvICi0CvdH",
-        "outputId": "813f1fc1-3079-434b-9732-d16180c0fd2b"
+        "outputId": "9535caef-2f0f-475d-bf9d-b5e1685d9bc8"
       },
-      "execution_count": 8,
+      "execution_count": 7,
       "outputs": [
         {
           "output_type": "stream",
@@ -825,9 +834,9 @@
           "height": 1000
         },
         "id": "3TmNdVe4DhEo",
-        "outputId": "192a9b0b-f1d6-432c-d042-b074952d190e"
+        "outputId": "3ba6b244-9250-40cd-c24a-6c17c310be87"
       },
-      "execution_count": 9,
+      "execution_count": 8,
       "outputs": [
         {
           "output_type": "display_data",
@@ -892,13 +901,13 @@
       ],
       "metadata": {
         "id": "BRQ2kLfAhzY_",
-        "outputId": "c3f47327-cb22-4379-c814-b5941086ea40",
+        "outputId": "0f20f9db-4d41-4472-f7a5-871e752a9125",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 549
         }
       },
-      "execution_count": 10,
+      "execution_count": 9,
       "outputs": [
         {
           "output_type": "display_data",
@@ -924,13 +933,13 @@
       ],
       "metadata": {
         "id": "dUYpXn7Nh2DX",
-        "outputId": "cf330d15-5c0a-4b9b-8979-3184f00e8bd2",
+        "outputId": "265f98f3-90d6-4f14-b079-5f36f862c9d0",
         "colab": {
           "base_uri": "https://localhost:8080/",
           "height": 545
         }
       },
-      "execution_count": 11,
+      "execution_count": 10,
       "outputs": [
         {
           "output_type": "display_data",
@@ -967,9 +976,9 @@
           "height": 564
         },
         "id": "PcfMjOINgtVF",
-        "outputId": "66231aab-fe59-4851-9acc-a04045860de1"
+        "outputId": "efd005db-cd7c-4107-a313-e3b503c0a5d0"
       },
-      "execution_count": 12,
+      "execution_count": 11,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1006,9 +1015,9 @@
           "height": 564
         },
         "id": "wCLkXMI4gwGP",
-        "outputId": "80cf6860-1bb4-4f32-d10a-acbb568daccf"
+        "outputId": "e39cb4c6-b537-42f3-a999-959914b67643"
       },
-      "execution_count": 13,
+      "execution_count": 12,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1056,9 +1065,9 @@
           "height": 598
         },
         "id": "c8bDZ6QAKkQe",
-        "outputId": "8a008c56-0a14-4908-8baa-c2a2e369e4e8"
+        "outputId": "37339a59-9767-47a2-88e4-8af74e2937a2"
       },
-      "execution_count": 14,
+      "execution_count": 13,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1082,9 +1091,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "SBDTa9MyGpsg",
-        "outputId": "d617e542-ca78-4322-a0d7-72d66f0d9914"
+        "outputId": "268c3320-0b01-422a-afca-1c1c002bd742"
       },
-      "execution_count": 15,
+      "execution_count": 14,
       "outputs": [
         {
           "output_type": "stream",
@@ -1148,9 +1157,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "vpA8U7y-O182",
-        "outputId": "cbd84389-4bb9-4778-9e30-0546e46e7a4d"
+        "outputId": "bec34a18-be7a-4625-8cf3-4dd622032b15"
       },
-      "execution_count": 16,
+      "execution_count": 15,
       "outputs": [
         {
           "output_type": "stream",
@@ -1195,9 +1204,9 @@
           "base_uri": "https://localhost:8080/"
         },
         "id": "K0eMbu3qEzFd",
-        "outputId": "9dc692a8-525e-4911-d6ae-328170ed7c7d"
+        "outputId": "93314f67-4b8a-4c2e-f33c-01c2bdf02b9b"
       },
-      "execution_count": 17,
+      "execution_count": 16,
       "outputs": [
         {
           "output_type": "stream",
@@ -1237,9 +1246,9 @@
           "height": 806
         },
         "id": "gaUFTOSiE-WW",
-        "outputId": "6759254e-adfd-4e14-a076-5c3f45edb177"
+        "outputId": "0e19aff9-3cd5-432c-899d-93183f8bd760"
       },
-      "execution_count": 18,
+      "execution_count": 17,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1273,9 +1282,9 @@
           "height": 1000
         },
         "id": "joXJuPJFFPJ3",
-        "outputId": "394d4894-af18-4dc5-c2b5-e116771b0ffd"
+        "outputId": "10fa306a-c8de-40ad-bba2-6b23d28941fd"
       },
-      "execution_count": 19,
+      "execution_count": 18,
       "outputs": [
         {
           "output_type": "display_data",
@@ -1362,9 +1371,9 @@
           "height": 564
         },
         "id": "V2BV9kcwg1Pe",
-        "outputId": "d97105ad-ffc6-4170-e340-fc3d87a20454"
+        "outputId": "fd049458-5ce3-4c41-df4f-326a1c2f47f3"
       },
-      "execution_count": 20,
+      "execution_count": 19,
       "outputs": [
         {
           "output_type": "display_data",
